Fix text wrapping

--- a/projects/skills/src/app/task/shared/video-task/info-task.component.scss
+++ b/projects/skills/src/app/task/shared/video-task/info-task.component.scss
@@ -11,6 +11,8 @@
   }
 
   &__text {
+    white-space: pre-line;
+
     @include typography.body-12;
 
     @include responsive.apply-desktop {
